--- a/locales/fr_ca.json
+++ b/locales/fr_ca.json
@@ -426,9 +426,9 @@
       "text": "Vous aimez miser gros? Dans ce cas, nous savons ce dont vous avez besoin. Une fois par mois, bénéficiez d’un bonus spécial pour les grands joueurs de 30% jusqu’à $800 sur votre dépôt à partir de $450."
     },
     "knockoutFootball": {
-      "title": "Knockout<br/>Football<br/>Rush",
-      "name": "Knockout Football Rush",
-      "text": "Le premier tournoi Réseau Knockout Football Rush aura lieu du 10 juin à 00 h 01 au 25 juin à 23 h 59, GMT+2. Nous avons 5 tournois avec des prix d’un montant de 25 000 EUR, distribués aux 500 premiers joueurs ayant obtenu les meilleurs résultats au classement. Faites une mise minimale de 0,10 EUR, choisissez vos jeux de machines à sous Habanero préférés et donnons le coup d’envoi de cette campagne!"
+      "title": "Jouons<br/> avec le deuxième <br/>tour de Habanero!",
+      "name": "Jouons avec le deuxième tour de Habanero!",
+      "text": "La course au jackpot Knockout Football Rush se déroulera du 26 juin, 00 h 01 au 17 juillet, 23 h 59, GMT+2. Avec 22 courses quotidiennes et un montant total de 30 000 € distribué de manière aléatoire à 2 200 joueurs.<br/><br/>C’est parti avec Ninecasino et Habanero!<br/><br/>Connectez-vous chaque jour pour découvrir un nouveau prix total quotidien, variant de 1 000 à 2 500 €. Choisissez simplement vos jeux de machines à sous Habanero préférés, faites une mise minimale de 0,10 € et donnons le coup d’envoi de cette campagne!"
     },
     "dropsWinsSlots": {
       "title": "Drops<span class=\"Colored\"> & </span>Wins",
@@ -487,33 +487,30 @@
     ]
   },
   "knockoutFootball": {
-    "prize": "€ 55 000",
-    "text": "Le premier tournoi Réseau Knockout Football Rush aura lieu du 10 juin à 00 h 01 au 25 juin à 23 h 59, GMT+2. Nous avons 5 tournois avec des prix d’un montant de 25 000 EUR, distribués aux 500 premiers joueurs ayant obtenu les meilleurs résultats au classement. Faites une mise minimale de 0,10 EUR, choisissez vos jeux de machines à sous Habanero préférés et donnons le coup d’envoi de cette campagne!<br/><br/>Rejoignez la frénésie du soccer dès le début du tournoi!<br/>Vous êtes un mordu de soccer? Bienvenue au club!<br/>Montez dans le classement et devenez le meilleur joueur!",
-    "textMobile": "Le premier tournoi Réseau Knockout Football Rush aura lieu du 10 juin à 00 h 01 au 25 juin à 23 h 59, GMT+2. Nous avons 5 tournois avec des prix d’un montant de 25 000 EUR, distribués aux 500 premiers joueurs ayant obtenu les meilleurs résultats au classement. Faites une mise minimale de 0,10 EUR, choisissez vos jeux de machines à sous Habanero préférés et donnons le coup d’envoi de cette campagne!",
+    "title": "Jouons<br/> avec le deuxième <br/>tour de Habanero!",
+    "prize": "30 000 €",
+    "text": "La course au jackpot Knockout Football Rush se déroulera du 26 juin, 00 h 01 au 17 juillet, 23 h 59, GMT+2. Avec 22 courses quotidiennes et un montant total de 30 000 € distribué de manière aléatoire à 2 200 joueurs.<br/><br/>C’est parti avec Ninecasino et Habanero!<br/><br/>Connectez-vous chaque jour pour découvrir un nouveau prix total quotidien, variant de 1 000 à 2 500 €. Choisissez simplement vos jeux de machines à sous Habanero préférés, faites une mise minimale de 0,10 € et donnons le coup d’envoi de cette campagne!",
+    "textMobile": "La course au jackpot Knockout Football Rush se déroulera du 26 juin, 00 h 01 au 17 juillet, 23 h 59, GMT+2.",
     "terms": [
       {
-        "text": "Période de la campagne : Du 10 au 25 juin 2021, GMT+2."
+        "title": "Période de la campagne:",
+        "text": "du 26 juin au 17 juillet 2021, GMT+2"
       },
       {
-        "text": "Structure de la campagne : 5 tournois de 3 jours chacun."
+        "title": "Structure de la campagne:",
+        "text": "22 courses, chacune d’une durée de 2 h"
       },
       {
-        "text": "Cagnotte : 25 000 EUR/5 000 EUR par tournoi."
+        "title": "Structure des prix:",
+        "text": "2 200 gagnants, 100 par course"
       },
       {
-        "text": "Structure des prix : 500 gagnants, 100 par tournoi."
+        "title": "Mise minimale:",
+        "text": "0,10 €"
       },
       {
-        "text": "Mise minimale : 0,10 EUR."
-      },
-      {
-        "text": "Contenu qualifiant : tous les jeux de machines à sous Habanero."
-      },
-      {
-        "text": "Critères de qualification : les gagnants sont déterminés en fonction du plus élevé roulement enregistré."
-      },
-      {
-        "text": "Habanero se réserve le droit de modifier, suspendre ou annuler la promotion à tout moment."
+        "title": "Conditions générales de la promotion :",
+        "text": "• Contenu qualifiant : tous les jeux de machines à sous Habanero <br/>• Critères de qualification : à un moment aléatoire de la course, un joueur déclenchera le premier gain, toutes les mises consécutives reçues par le serveur contribueront alors à votre position<br/>• Habanero se réserve le droit de modifier, suspendre ou annuler la promotion à tout moment"
       }
     ]
   },
