NINE-498 register now - sign up now

--- a/locales/cs.json
+++ b/locales/cs.json
@@ -4,7 +4,7 @@
     "signUp" : "Zaregistrovat se",
     "register" : "Zaregistrovat se",
     "terms" : "Pravidla bonusů",
-    "registerNow" : "Zaregistrujte se nyní",
+    "registerNow" : "Přihlaste se nyní",
     "login" : "Přihlásit se",
     "logIn" : "Přihlásit se",
     "joinNow" : "Přidej se teď",
