--- a/locales/fr_ca.json
+++ b/locales/fr_ca.json
@@ -4,7 +4,7 @@
     "signUp": "S'enregistrer",
     "register": "Enregistrer",
     "terms": "Conditions d'attribution des bonus",
-    "registerNow": "Enregistrez-vous maintenant",
+    "registerNow": "S'enregistrer-vous maintenant",
     "login": "Login",
     "logIn": "Log in",
     "joinNow": "Adhérez maintenant",
