--- a/locales/en_ca.json
+++ b/locales/en_ca.json
@@ -4,7 +4,7 @@
     "signUp": "Sign up",
     "register": "Register",
     "terms": "Bonus terms & conditions",
-    "registerNow": "Register now",
+    "registerNow": "Sign up now",
     "login": "Login",
     "logIn": "Log in",
     "joinNow": "Join now",
