NINE-556 updated texts for drops slots

--- a/locales/cs.json
+++ b/locales/cs.json
@@ -428,7 +428,7 @@
     "dropsWinsSlots": {
       "title": "Drops<span class=\"Colored\"> & </span>Wins<br/> Slots",
       "name": "Drops & Wins Slots",
-      "text": "Vítejte v nové 5. fázi pro akce Daily Drops & Wins. Pragmatic Play se rozhodl zdvojnásobit měsíční sumu slotové edice Drops and Wins na 500 000 eur! Rovněž zvyšuje počet měsíčních peněžitých cen a nabízí větší šance na výhru. Zúčastněte se vzrušující Drops & Wins a získejte příležitost vyhrát část z neuvěřitelných 4 000 000 eur v některé z cen!"
+      "text": "Vítejte v nové 6. fázi pro akce Daily Drops & Wins. Pragmatic Play se rozhodl zdvojnásobit měsíční sumu slotové edice Drops and Wins na 500 000 eur! Rovněž zvyšuje počet měsíčních peněžitých cen a nabízí větší šance na výhru. Zúčastněte se vzrušující Drops & Wins a získejte příležitost vyhrát část z neuvěřitelných 4 000 000 eur v některé z cen! Proto jsou tentokrát do týdnů 21-24 týdenních turnajů a denních výher zahrnuty některé nové hry!"
     },
     "dropsWinsLive": {
       "title": "Drops<span class=\"Colored\"> & </span>Wins",
@@ -512,16 +512,16 @@
   "dropsWinsSlots": {
     "title": "Aktualizovaná edice Drops & Wins Slots",
     "prize": "4 000 000 eur",
-    "text": "Vítejte v nové 5. fázi pro akce Daily Drops & Wins. Pragmatic Play se rozhodl zdvojnásobit měsíční sumu slotové edice Drops and Wins na 500 000 eur! Rovněž zvyšuje počet měsíčních peněžitých cen a nabízí větší šance na výhru. Zúčastněte se vzrušující Drops & Wins a získejte příležitost vyhrát část z neuvěřitelných 4 000 000 eur v některé z cen! Proto jsou tentokrát do týdnů 17–20 týdenních turnajů a denních výher zahrnuty některé nové hry!",
-    "textMobile": "Vítejte v nové 5. fázi pro akce Daily Drops & Wins. Pragmatic Play se rozhodl zdvojnásobit měsíční sumu slotové edice Drops and Wins na 500 000 eur!",
+    "text": "Vítejte v nové 6. fázi pro akce Daily Drops & Wins. Pragmatic Play se rozhodl zdvojnásobit měsíční sumu slotové edice Drops and Wins na 500 000 eur! Rovněž zvyšuje počet měsíčních peněžitých cen a nabízí větší šance na výhru. Zúčastněte se vzrušující Drops & Wins a získejte příležitost vyhrát část z neuvěřitelných 4 000 000 eur v některé z cen! Proto jsou tentokrát do týdnů 21-24 týdenních turnajů a denních výher zahrnuty některé nové hry!",
+    "textMobile": "Vítejte v nové 6. fázi pro akce Daily Drops & Wins. Pragmatic Play se rozhodl zdvojnásobit měsíční sumu slotové edice Drops and Wins na 500 000 eur!",
     "terms": [
       {
-        "title": ". Fáze 5 probíhá v termínu:",
-        "text": "● 17. týden: 3. června 2021 09:01 SELČ - 9. června 2021 18:59 SELČ<br/>● 18. týden: 9. června 2021 19:01 SELČ - 16. června 2021 18:59 SELČ<br/>● 19. týden: 16. června 2021 19:01 SELČ - 23. června 2021 18:59 SELČ<br/>● 20. týden: 23. června 2021 19:01 SELČ - 30. června 2021 18:59 SELČ"
+        "title": "Fáze 6 probíhá v termínu:",
+        "text": "● 21. týden: 30. června 2021 09:01 CEST – 7. července 2021 18:59 CEST<br/>● 22. týden: 7. července 2021 19:01 CEST – 14. července 2021 18:59 CEST<br/>● 23. týden: 14. července 2021 19:01 CEST – 21. července 2021 18:59 CEST<br/>● 24. týden: 21. července 2021 19:01 CEST – 28. července 2021 18:59 CEST"
       },
       {
         "title": "Hry zahrnuté do týdnů 17–20",
-        "text": "Wolf Gold™, Mustang Gold™, Sweet Bonanza™, John Hunter and the Tomb of the Scarab Queen™, Great Rhino Megaways™, John Hunter and the Book of Tut™, The Dog House™, The Dog House Megaways™, Joker’s Jewels™, Chilli Heat™, Fruit Party™, Big Bass Bonanza™, Madame Destiny Megaways™, Gems Bonanza™, Wild Wild Riches™, The Hand of Midas™, Wild West Gold™, Gates of Olympus™, Fishin’ Reels™, Power of Thor Megaways™, Buffalo King Megaways™, Amazing Money Machine™, Phoenix Forge™, Cash Elevator ™, The Magic Cauldron – Enchanted Brew™."
+        "text": "Wolf Gold™, Mustang Gold™, Sweet Bonanza™, John Hunter and the Tomb of the Scarab Queen™, Great Rhino Megaways™, John Hunter and the Book of Tut™, The Dog House™, The Dog House Megaways™, Chilli Heat™, Fruit Party™, Big Bass Bonanza™, Madame Destiny Megaways™, Gems Bonanza™, Wild Wild Riches™, Wild West Gold™, Gates of Olympus™, Power of Thor Megaways™, Buffalo King Megaways™, The Hand of Midas™, Floating Dragon Hold & Spin™, The Magic Cauldron – Enchanted Brew™, Heart of Rio™, Dragon Hot Hold and Spin™, Lucky Lightning™, 5 Lions Megaways™."
       },
       {
         "title": "Drops & Wins zahrnuje",
