--- a/locales/de.json
+++ b/locales/de.json
@@ -434,7 +434,7 @@
     "dropsWinsSlots": {
       "title": "Drops<span class=\"Colored\"> & </span>Wins<br/> Slots",
       "name": "Drops & Wins Slots",
-      "text": "Willkommen zu Phase 5 der täglichen Drops & Wins Werbeaktion. Pragmatic Play verdoppelt die monatliche Slots-Ausgabe des Budgets von Drops And Wins auf 500.000 €! Außerdem wird die Anzahl der monatlichen Geldpreise erhöht und es gibt mehr Gelegenheiten auf Gewinne. Mach mit beim aufregenden Drops & Wins und erhalte die Chance, einen Anteil an dem massiven 4.000.000 € Preisgeld zu gewinnen!"
+      "text": "Willkommen zu Phase 6 der täglichen Drops & Wins Werbeaktion. Pragmatic Play verdoppelt die monatliche Slots-Ausgabe des Budgets von Drops And Wins auf 500.000 €! Außerdem wird die Anzahl der monatlichen Geldpreise erhöht und es gibt mehr Gelegenheiten auf Gewinne. Mach mit beim aufregenden Drops & Wins und erhalte die Chance, einen Anteil an dem massiven 4.000.000 € Preisgeld zu gewinnen! Deshalb gibt es diesmal in den Wochen 21-24 der Wöchentlichen Turniere und Täglichen Gewinnausspielungen mit einigen neuen Spielen!"
     },
     "dropsWinsLive": {
       "title": "Drops<span class=\"Colored\"> & </span>Wins<br/> Live",
@@ -518,16 +518,16 @@
   "dropsWinsSlots": {
     "title": "Aufgewertete Ausgabe von Drops & Wins Slots",
     "prize": "4.000.000 €",
-    "text": "Willkommen zu Phase 5 der täglichen Drops & Wins Werbeaktion. Pragmatic Play verdoppelt die monatliche Slots-Ausgabe des Budgets von Drops And Wins auf 500.000 €! Außerdem wird die Anzahl der monatlichen Geldpreise erhöht und es gibt mehr Gelegenheiten auf Gewinne. Mach mit beim aufregenden Drops & Wins und erhalte die Chance, einen Anteil an dem massiven 4.000.000 € Preisgeld zu gewinnen! Deshalb gibt es diesmal in den Wochen 17–20 der Wöchentlichen Turniere und Täglichen Gewinnausspielungen mit einigen neuen Spielen!",
-    "textMobile": "Willkommen zu Phase 5 der täglichen Drops & Wins Werbeaktion. Pragmatic Play verdoppelt die monatliche Slots-Ausgabe des Budgets von Drops And Wins auf 500.000 €!",
+    "text": "Willkommen zu Phase 6 der täglichen Drops & Wins Werbeaktion. Pragmatic Play verdoppelt die monatliche Slots-Ausgabe des Budgets von Drops And Wins auf 500.000 €! Außerdem wird die Anzahl der monatlichen Geldpreise erhöht und es gibt mehr Gelegenheiten auf Gewinne. Mach mit beim aufregenden Drops & Wins und erhalte die Chance, einen Anteil an dem massiven 4.000.000 € Preisgeld zu gewinnen! Deshalb gibt es diesmal in den Wochen 21-24 der Wöchentlichen Turniere und Täglichen Gewinnausspielungen mit einigen neuen Spielen!",
+    "textMobile": "Willkommen zu Phase 6 der täglichen Drops & Wins Werbeaktion. Pragmatic Play verdoppelt die monatliche Slots-Ausgabe des Budgets von Drops And Wins auf 500.000 €!",
     "terms": [
       {
-        "title": "Laufzeit der Phase 5",
-        "text": "● Woche 17: 3. Juni 2021 09:01 MESZ - 9. Juni 2021 18:59 MESZ<br/>● Woche 18: 9. Juni 2021 19:01 Uhr MESZ - 16. Juni 2021 18:59 Uhr MESZ<br/>● Woche 19: 16. Juni 2021 19:01 Uhr MESZ - 23. Juni 2021 18:59 Uhr MESZ<br/>● Woche 20: 23. Juni 2021 19:01 Uhr MESZ - 30. Juni 2021 18:59 Uhr MESZ"
+        "title": "Laufzeit der Phase 6",
+        "text": "● Woche 21: 30th Juni 2021 09:01 CEST – 7th Juli 2021 18:59 CEST<br/>● Woche 22: 7th Juli 2021 19:01 CEST – 14th Juli 2021 18:59 CEST<br/>● Woche 23: 14th Juli 2021 19:01 CEST – 21st Juli 2021 18:59 CEST<br/>● Woche 24: 21st Juli 2021 19:01 CEST – 28th Juli 2021 18:59 CEST"
       },
       {
         "title": "Teilnehmende Spiele der Wochen 17 – 20",
-        "text": "Wolf Gold™, Mustang Gold™, Sweet Bonanza™, John Hunter and the Tomb of the Scarab Queen™, Great Rhino Megaways™, John Hunter and the Book of Tut™, The Dog House™, The Dog House Megaways™, Joker’s Jewels™, Chilli Heat™, Fruit Party™, Big Bass Bonanza™, Madame Destiny Megaways™, Gems Bonanza™, Wild Wild Riches™, The Hand of Midas™, Wild West Gold™, Gates of Olympus™, Fishin’ Reels™, Power of Thor Megaways™, Buffalo King Megaways™, Amazing Money Machine™, Phoenix Forge™, Cash Elevator ™, The Magic Cauldron – Enchanted Brew™."
+        "text": "Wolf Gold™, Mustang Gold™, Sweet Bonanza™, John Hunter and the Tomb of the Scarab Queen™, Great Rhino Megaways™, John Hunter and the Book of Tut™, The Dog House™, The Dog House Megaways™, Chilli Heat™, Fruit Party™, Big Bass Bonanza™, Madame Destiny Megaways™, Gems Bonanza™, Wild Wild Riches™, Wild West Gold™, Gates of Olympus™, Power of Thor Megaways™, Buffalo King Megaways™, The Hand of Midas™, Floating Dragon Hold & Spin™, The Magic Cauldron – Enchanted Brew™, Heart of Rio™, Dragon Hot Hold and Spin™, Lucky Lightning™, 5 Lions Megaways™."
       },
       {
         "title": "Drops & Wins beinhaltet",
