--- a/locales/fr_ca.json
+++ b/locales/fr_ca.json
@@ -433,7 +433,7 @@
     "dropsWinsSlots": {
       "title": "Drops<span class=\"Colored\"> & </span>Wins",
       "name": "Drops & Wins Slots",
-      "text": "Bienvenue à la nouvelle étape 5 de la promotion Drops & Wins quotidienne. Pragmatic Play a décidé de doubler le budget de l’édition mensuelle de Drops & Wins Slots à 500 000 €! Ils augmentent également le nombre de prix mensuels en argent et vous donnent encore plus de chances de gagner. Participez au passionnant Drops & Wins et courez la chance de gagner une part des 4 000 000 € de prix!"
+      "text": "Bienvenue à la nouvelle étape 6 de la promotion Drops & Wins quotidienne. Pragmatic Play a décidé de doubler le budget de l’édition mensuelle de Drops & Wins Slots à 500 000 €! Ils augmentent également le nombre de prix mensuels en argent et vous donnent encore plus de chances de gagner. Participez au passionnant Drops & Wins et courez la chance de gagner une part des 4 000 000 € de prix! C’est pourquoi, cette fois, les semaines 21-24 sont consacrées à des tournois hebdomadaires et à des remises de prix quotidiens avec de nouveaux jeux!"
     },
     "dropsWinsLive": {
       "title": "Drops<span class=\"Colored\"> & </span>Wins<br/> Live",
@@ -517,16 +517,16 @@
   "dropsWinsSlots": {
     "title": "Édition mise à jour de Drops & Wins Slots",
     "prize": "4 000 000 €",
-    "text": "Bienvenue à la nouvelle étape 5 de la promotion Drops & Wins quotidienne. Pragmatic Play a décidé de doubler le budget de l’édition mensuelle de Drops & Wins Slots à 500 000 €! Ils augmentent également le nombre de prix mensuels en argent et vous donnent encore plus de chances de gagner. Participez au passionnant Drops & Wins et courez la chance de gagner une part des 4 000 000 € de prix! C’est pourquoi, cette fois, les semaines 17–20 sont consacrées à des tournois hebdomadaires et à des remises de prix quotidiens avec de nouveaux jeux!",
-    "textMobile": "Bienvenue à la nouvelle étape 5 de la promotion Drops & Wins quotidienne. Pragmatic Play a décidé de doubler le budget de l’édition mensuelle de Drops & Wins Slots à 500 000 €!",
+    "text": "Bienvenue à la nouvelle étape 6 de la promotion Drops & Wins quotidienne. Pragmatic Play a décidé de doubler le budget de l’édition mensuelle de Drops & Wins Slots à 500 000 €! Ils augmentent également le nombre de prix mensuels en argent et vous donnent encore plus de chances de gagner. Participez au passionnant Drops & Wins et courez la chance de gagner une part des 4 000 000 € de prix! C’est pourquoi, cette fois, les semaines 21-24 sont consacrées à des tournois hebdomadaires et à des remises de prix quotidiens avec de nouveaux jeux!",
+    "textMobile": "Bienvenue à la nouvelle étape 6 de la promotion Drops & Wins quotidienne. Pragmatic Play a décidé de doubler le budget de l’édition mensuelle de Drops & Wins Slots à 500 000 €!",
     "terms": [
       {
-        "title": "L’étape 5 se déroule ainsi",
-        "text": "● Semaine 17: 3 juin 2021 09:01 CEST – 9 juin 2021 18:59 CEST<br/>● Semaine 18: 9 juin 2021 19:01 CEST – 16 juin 2021 18:59 CEST<br/>● Semaine 19: 16 juin 2021 19:01 CEST – 23 juin 2021 18:59 CEST<br/>● Semaine 20: 23 juin 2021 19:01 CEST – 30 juin 2021 18:59 CEST"
+        "title": "L’étape 6 se déroule ainsi",
+        "text": "● Semaine 21: 30th juin 2021 09:01 CEST – 7th juli 2021 18:59 CEST<br/>● Semaine 22: 7th June 2021 19:01 CEST – 14th juli 2021 18:59 CEST<br/>● Semaine 23: 14th June 2021 19:01 CEST – 21st juli 2021 18:59 CEST<br/>● Semaine 24: 21st June 2021 19:01 CEST – 28th juli 2021 18:59 CEST"
       },
       {
         "title": "Jeux participants:",
-        "text": "Wolf Gold™, Mustang Gold™, Sweet Bonanza™, John Hunter and the Tomb of the Scarab Queen™, Great Rhino Megaways™, John Hunter and the Book of Tut™, The Dog House™, The Dog House Megaways™, Joker’s Jewels™, Chilli Heat™, Fruit Party™, Big Bass Bonanza™, Madame Destiny Megaways™, Gems Bonanza™, Wild Wild Riches™, The Hand of Midas™, Wild West Gold™, Gates of Olympus™, Fishin’ Reels™, Power of Thor Megaways™, Buffalo King Megaways™, Amazing Money Machine™, Phoenix Forge™, Cash Elevator ™, The Magic Cauldron – Enchanted Brew™."
+        "text": "Wolf Gold™, Mustang Gold™, Sweet Bonanza™, John Hunter and the Tomb of the Scarab Queen™, Great Rhino Megaways™, John Hunter and the Book of Tut™, The Dog House™, The Dog House Megaways™, Chilli Heat™, Fruit Party™, Big Bass Bonanza™, Madame Destiny Megaways™, Gems Bonanza™, Wild Wild Riches™, Wild West Gold™, Gates of Olympus™, Power of Thor Megaways™, Buffalo King Megaways™, The Hand of Midas™, Floating Dragon Hold & Spin™, The Magic Cauldron – Enchanted Brew™, Heart of Rio™, Dragon Hot Hold and Spin™, Lucky Lightning™, 5 Lions Megaways™."
       },
       {
         "title": "Drops & Wins comprend",
